2007-07-26  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_last.erl: Adapted to mod_privacy changes.
	* src/mod_privacy.erl: Refactoring to extract records in include file.
	* src/mod_privacy.hrl: Likewise.

	* src/mod_roster_odbc.erl: Fixed wrong call.
					 
2007-07-24  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Added recommandations on max_stanza options
	usage.

	* src/ejabberd_s2s_out.erl: Autodisconnect s2s connections which
	are overloaded (EJAB-287).
	* src/p1_fsm.erl: Likewise.

2007-07-19  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_s2s_in.erl: Add s2s whitelist / blacklist support
	on incoming s2s connections (EJAB-283)
	* src/ejabberd_s2s.erl: Likewise

2007-07-18  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_s2s.erl: Fixed typos.

	* src/ejabberd_s2s.erl: Implements s2s hosts whitelist / blacklist
	* src/ejabberd.cfg.example: Likewise

	* src/ejabberd_s2s_out.erl: Make s2s connections more robust
	* src/ejabberd_s2s.erl: Likewise

2007-07-17  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_configure.erl: Bugfix: Show only virtual host users
	on admin disco for all users (EJAB-268) (Thanks to Badlop).

	* src/mod_muc/mod_muc_log.erl: Recognise more URI schemes in
	logged HTML (EJAB-279) (Thanks to qu1j0t3).

	* src/ejabberd_s2s_out.erl: Improved place of the INFO /
	DEBUG printout.

	* src/odbc/ejabberd_odbc.erl: Better error handling for MySQL
	native driver (EJAB-224).

2007-07-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Added remove_connection/3
	* src/ejabberd_s2s_out.erl: Bugfix: remove only own s2s record

2007-07-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Bounce packets after unregistering s2s
	connection, not before

2007-07-11  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_echo.erl: mod_echo does not reply to other
	components. This is to make sure that a component will not